Revision history for Perl extension Chemistry::Mol.

0.30
        - New Chemistry::File interface
        - Added gzip support for reading and writing
        - Improved the testing suite
        - New Atom methods: sprout_hydrogens, collapse_hydrogens
        - New Mol methods: sprout_hydrogens, collapse_hydrogens

0.26  Aug 6 2004
        - Added %S option to $mol->printf
        - Atom.pm: added total_hydrogens, implicit_hydrogens, explicit_valence,
          and deprecated hydrogens.

0.25  Jun 30 2004
        - Fixed Chemistry::File :auto so that it looks in every @INC directory.
        - Added internal coordinates for atoms.
        - Updated the tutorial a little bit.

0.24  Jun 16 2004
        - Mol:: _weaken, sort_atoms, atom_class, bond_class
        - Atom:: sprintf, printf, hydrogens, valence
        - Added the Chemistry::File::Dumper module.

0.23  May 19 2004
        - New methods: Mol::printf, sprintf, charge; Atom::aromatic,
          formal_charge; Bond::aromatic
        - Fixed POD bug.

0.22  May 17 2004
        - Fixed bug in bonds($from)
        - Added add_atom_np, add_bond_np, bonds_neighbors
        - Fixed another memory leak
        - Added Atom::formal_charge

0.21  May 13 2004
        - Fixed bug where $/ was undef'ed in a nonlocal way in File.pm.
        - Added formula parser contributed by Brent Gregersen.
        - Added %j and %% formats to Formula.pm.

0.20  May 06 2004
        - Use Scalar::Util::weaken to avoid strong cyclic references
          and ensure garbage collection.
        - New methods for Chemistry::Mol: delete_atom, delete_bond,
          clone, combine, separate, distance
        - New methods for Chemistry::Atom: angle, dihedral, angle_deg, 
          dihedral_deg, delete
        - New methods for Chemistry::Bond: delete
        - Chemistry::Mol can export read_mol
        - Chemistry::Atom can export distance, angle, dihedral

0.11  Feb 22 2004