@@ -4,8 +4,10 @@ Revision history for Perl extension Chemistry::Mol.
         - New Chemistry::File interface
         - Added gzip support for reading and writing
         - Improved the testing suite
-        - New Atom methods: sprout_hydrogens, collapse_hydrogens
+        - New Atom methods: sprout_hydrogens, collapse_hydrogens, mass_number
         - New Mol methods: sprout_hydrogens, collapse_hydrogens
+        - Added support for Chemistry::Isotope
+        - Extended the Chemistry::Obj::attr method
 
 0.26  Aug 6 2004
         - Added %S option to $mol->printf
